--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.4",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
