--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "embla-carousel-react": "^8.5.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.474.0",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
